--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -26,12 +26,14 @@
     "@material-ui/icons": "^4.11.2",
     "clsx": "^1.1.1",
     "graphiql": "^1.4.0",
+    "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
     "react-relay": "^11.0.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-virtualized": "^9.22.3",
     "recoil": "^0.2.0",
     "relay-runtime": "^11.0.0",
@@ -49,8 +51,7 @@
     "@snowpack/plugin-typescript": "^1.2.1",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "@types/react-relay": "^7.0.17",
-    "@types/react-router-dom": "^5.1.7",
+    "@types/react-relay": "^11.0.0",
     "@types/react-virtualized": "^9.21.11",
     "@types/relay-runtime": "^11.0.0",
     "@types/snowpack-env": "^2.3.3",
