--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,10 +24,10 @@
     "graphql": "^15.5.0",
     "graphql-subscriptions": "^1.2.1",
     "iterall": "^1.3.0",
-    "jsdom": "^16.5.1",
     "jszip": "^3.6.0",
     "make-promises-safe": "^5.1.0",
     "nexus": "^1.0.0",
+    "node-html-parser": "^3.1.4",
     "node-ipc": "^9.1.4",
     "pubsub-js": "^1.9.3",
     "puppeteer-core": "^8.0.0",
@@ -36,7 +36,6 @@
   },
   "devDependencies": {
     "@types/debounce": "^1.2.0",
-    "@types/jsdom": "^16.2.7",
     "@types/node-ipc": "^9.1.3",
     "@types/pubsub-js": "^1.8.2",
     "eslint": "^7.23.0",
