--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build-prod": "node build.mjs production",
     "build-dev": "node build.mjs development",
-    "start": "electron dist/index.cjs",
+    "start": "electron dist-dev/index.cjs",
     "start-r": "yarn build-dev&& yarn start",
     "typecheck": "tsc --noEmit",
     "lint": "eslint --cache src/**/*"
