--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "scripts": {
     "build-prod": "node build.mjs production",
-    "build-dev": "node build.mjs development preferClientFromUrl",
+    "build-dev": "node build.mjs development true",
+    "build-dev-app": "node build.mjs development false 9221",
     "start": "electron dist-dev/index.cjs",
     "start-r": "yarn build-dev&& yarn start",
     "typecheck": "tsc --noEmit",
@@ -26,7 +27,7 @@
   "devDependencies": {
     "@types/node-ipc": "^9.1.3",
     "electron": "^12.0.1",
-    "esbuild": "^0.11.5",
+    "esbuild": "^0.11.12",
     "eslint": "^7.23.0",
     "typescript": "^4.2.3"
   }
