--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
   "description": "TM Auto",
   "main": "build/main/index.cjs",
   "dependencies": {
+    "puppeteer": "^9.0.0",
     "puppeteer-extra-plugin-stealth": "^2.7.6"
   }
 }
