--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "files": [
       "./build/**/*"
     ],
+    "asarUnpack": "node_modules/puppeteer/.local-chromium/**/*",
     "nodeVersion": "14.16.0",
     "electronVersion": "12.0.2",
     "icon": "./packages/renderer/public/images/TMAuto256.png",
