--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "productName": "TM Auto",
     "copyright": "Copyright © 2019-2021 ${author}",
     "files": [
-      "./build/**/*"
+      "build/**/*",
+      "Chrome-bin/**/*"
     ],
-    "asarUnpack": "node_modules/puppeteer/.local-chromium/**/*",
+    "asarUnpack": "Chrome-bin/**/*",
     "nodeVersion": "14.16.0",
     "electronVersion": "12.0.2",
     "icon": "./packages/renderer/public/images/TMAuto256.png",
