--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -30,7 +30,7 @@
     "node-ipc": "^9.1.4",
     "p-debounce": "^3.0.2",
     "pubsub-js": "^1.9.3",
-    "puppeteer": "^9.0.0",
+    "puppeteer-core": "^9.0.0",
     "puppeteer-extra": "^3.1.18",
     "puppeteer-extra-plugin-stealth": "^2.7.8"
   },
